welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: ')' expected but ';' found.
      setCouleurBrosse(tab((j+decal)%taille);
                                            ^